<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_app"
            android:visible="false"
            android:icon="@drawable/applications"
            android:title="@string/menu_applications" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/menu_login"
            />
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/login"
            android:title="@string/logout"/>


    </group>


</menu>
