<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_app"
        android:name="com.shubamvirdi.internshala.ui.MyApplications.ApplicationFragment"
        android:label="@string/menu_applications"
        tools:layout="@layout/fragment_my_applications" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shubamvirdi.internshala.ui.Dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <fragment
        android:id="@+id/nav_login"
        android:name="com.shubamvirdi.internshala.ui.Login.Login"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

</navigation>