<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Login.Login">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kindly Login!"
        android:textSize="30sp"
        android:fontFamily="@font/overpass_semibold"
        android:textColor="#000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/emailholder"
        android:hint="@string/email_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailholder"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/passholder"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="5dp"
        android:hint="@string/pass_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#000"
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:fontFamily="@font/overpass_semibold"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/overpass_semibold"
        android:layout_below="@id/passholder"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:id="@+id/loginbutton"
        android:background="@drawable/button_bg"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="5dp"
        android:id="@+id/or"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginbutton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/tosignup"
        android:textColor="#DF3E7B"
        android:layout_below="@id/or"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>