<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shubamvirdi.internshala.Activities.DetailedWorkshop">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:contentPadding="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/dw_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/cd_for_dw"
                android:src="@drawable/done"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/overpass_semibold"
                android:text="@string/card_title"
                android:layout_below="@+id/dw_logo"
                android:layout_marginLeft="50dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:id="@+id/dw_card_title"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/dw_logo"
                android:layout_height="40dp"
                android:background="@drawable/rank_bg"
                android:layout_marginStart="5dp"
                android:id="@+id/rankImage"
                />
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/rankValue"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="#1"
                android:layout_below="@+id/dw_logo"
                android:textSize="18sp"
                android:fontFamily="@font/overpass"
                android:textColor="#fff"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Subtitle"
                android:id="@+id/dw_card_subtitle"
                android:textSize="15sp"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/overpass_semibold"
                android:layout_below="@id/dw_card_title"
                android:layout_marginStart="50dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date:"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="40dp"
                android:layout_below="@id/dw_card_subtitle"
                android:layout_marginLeft="10dp"
                android:id="@+id/dw_startdateLabel"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="25th June"
                android:textSize="16sp"
                android:fontFamily="@font/overpass"
                android:layout_toRightOf="@id/dw_startdateLabel"
                android:layout_below="@id/dw_card_subtitle"
                android:layout_marginTop="40dp"
                android:id="@+id/dw_startdate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location:"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@id/dw_startdateLabel"
                android:layout_marginLeft="10dp"
                android:id="@+id/dw_locationLabel"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/dw_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dw_startdateLabel"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_toEndOf="@id/dw_startdateLabel"
                android:layout_toRightOf="@id/dw_startdateLabel"
                android:fontFamily="@font/overpass"
                android:paddingTop="5dp"
                android:text="Gurugram"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time:"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:layout_below="@id/dw_location"
                android:layout_marginLeft="10dp"
                android:id="@+id/dw_timeLabel"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/dw_startdateLabel"
                android:layout_below="@id/dw_location"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:fontFamily="@font/overpass"
                android:layout_marginLeft="40dp"
                android:text="10:00 PM"
                android:id="@+id/dw_time"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/disclamer_bg"
                android:text="Note: We don't charge a fee from the students to apply for a workshop and we don't allow other companies to do either."
                android:textColor="#ccb83c"
                android:layout_below="@+id/dw_time"
                android:layout_marginTop="20dp"
                android:padding="10dp" />





        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorPrimary"
        android:id="@+id/registerWorkshop"
        android:fontFamily="@font/overpass_semibold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Registered"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:visibility="gone"
        android:id="@+id/registeredText"
        />



</RelativeLayout>
